# firo_common

./: .releaserc  Dockerfile
.github/workflows/: deploy_docker.yaml
firo_calibration/: CMakeLists.txt  README.md  package.xml
firo_calibration/allan_variance_ros/inflated/: imu.yaml
firo_calibration/allan_variance_ros/raw/: allan_variance.csv  imu.yaml  imu_config.yaml
firo_calibration/kalibr/camimu/inflated/: camimu-camchain-imucam.yaml  camimu-imu.yaml  camimu-results-imucam.txt
firo_calibration/kalibr/camimu/raw/: camimu-camchain-imucam.yaml  camimu-imu.yaml  camimu-results-imucam.txt
firo_calibration/kalibr/multicam/pinhole-equi/: multicam-camchain.yaml  multicam-results-cam.txt
firo_calibration/kalibr/multicam/pinhole-radtan/: multicam-camchain.yaml  multicam-results-cam.txt
firo_calibration/launch/: calibration.launch
firo_common/: CMakeLists.txt  package.xml
firo_control/: CMakeLists.txt  README.md  package.xml
firo_control/config/: controllers.yaml
firo_control/launch/: controllers.launch
firo_description/: CMakeLists.txt  README.md  package.xml
firo_description/config/: mechanical.yaml
firo_description/hooks/: firo_description.dsv.in
firo_description/launch/: firo_description.launch
firo_description/robots/: firo.urdf.xacro
firo_description/urdf/: materials.urdf.xacro  torso.urdf.xacro  wheel.urdf.xacro
firo_description/urdf/oak-d-w/: oak-d-w.urdf.xacro
