<?xml version="1.0"?>
<package format="2">
  <name>firo_description</name>
  <version>1.0.0</version>
  <description>FIRO hardware description</description>

  <maintainer email="gabriel@gabrielb.dev">Gabriel Brzeziński</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>firo_calibration</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
